--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -139,7 +139,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="History"
+            android:text="Recent Scans"
             android:textColor="#212121"
             android:textSize="16sp"
             android:layout_marginStart="16dp"/>
